# FullStackAutomationProject

./: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt  setup.py  test_env_config.py
allure-report/: index.html
allure-results/: 0205b69c-d8c2-4017-bf7c-7b4a4a941563-container.json  02905b7c-8fc7-4250-9383-b0b90c83c211-container.json  089b6fde-d044-4db1-ab6c-7ec71b09a4e8-container.json  0abda6f4-8370-4bb3-af74-8f26f9b6f81c-result.json  0b5b4987-1b73-4546-9fd3-f25e224627ae-result.json  0ca72099-54e4-4672-8b1b-c310777e1059-result.json  0d7afd9c-921c-4f04-bec1-ffac69e9e313-result.json  0e140ae4-5739-49d7-9e8e-7575db88152c-result.json  0edf2f31-7371-4998-943f-4a2989ca5b1d-container.json  107a3567-b5a7-4859-9549-57bea918a67d-container.json  115c9bfa-1c30-4b20-860b-f705b294649b-container.json  164f8395-eeed-476a-b4f8-7430624518d7-container.json  17592c6f-1301-4a16-bc7e-e5741aa59df8-container.json  181d7986-4258-4683-8ac5-ba926f076f22-result.json  1d1defe4-7936-4fba-acac-dce84917c97c-result.json  21418e50-95c7-40f9-a2cf-6c85a3720b05-container.json  23939996-2e99-4eac-9306-a7e861d99157-container.json  29a4787c-dfe5-4279-aa36-110ef7e1e28c-result.json  29f2f8d9-71ce-4028-b256-c493e67329f1-container.json  2b7582ee-4f32-4447-b3a9-f8766f29b237-container.json  2bc48d12-db0b-48d5-aaaf-0ef52fc99f62-container.json  2e7410c8-edc6-4805-b4fc-52e7dfc95256-container.json  305d3313-8a1e-4c95-9c3f-201d1b16690d-result.json  314ba03d-fb47-4f91-b28c-b04d82543611-container.json  31a6453a-a954-451b-86c7-cef04d9aac7d-result.json  (+139 more)
config/: conftest.py  pytest.ini
(+683 files in other folders)
